tests/baselines/reference/emitArrowFunctionWhenUsingArguments13(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
emitArrowFunctionWhenUsingArguments13.ts(3,14): error TS1100: Invalid use of 'arguments' in strict mode.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== emitArrowFunctionWhenUsingArguments13.ts (1 errors) ====
    function f() {
        var _arguments = 10;
        var a = (arguments) => () => _arguments;
                 ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    }